# read_write_register

./: CMakeLists.txt  README.md  main.cpp  server  server.cpp  server2.cpp
include/: display.hpp  display_mdrg.hpp  init_regs.hpp  opt_selector.hpp  pru_const.hpp  pru_register.hpp  register_module.hpp  register_rw.hpp  regs_tcp_client.hpp  rqs_generator.hpp  wp3read_module.hpp
json/: alpide_control.json  alpide_data.json  global_regs.json  offload.json  read_validation .json  trigger_manager.json  write_validation.json
src/: display_mdrg.cpp  init_regs.cpp  pru_register.cpp  register_module.cpp  register_r.cpp  register_rw.cpp  register_w.cpp  regs_tcp_client.cpp  rqs_generator.cpp  wp3read_module.cpp
